--- a/w04d01/initial/public/index.html
+++ b/w04d01/initial/public/index.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo App</title>
+
+    <!-- run the rest -->
+    <link rel="stylesheet" href="reset.css" />
+
+    <!-- bring in bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- load our custom styles -->
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h2>Intro to CSS</h2>
+    <h1>Biggest</h1>
+    <h2>Bigger</h2>
+    <h3>Smallest</h3>
   </body>
 </html>
