--- a/w04d03/ajax-demo/public/index.html
+++ b/w04d03/ajax-demo/public/index.html
@@ -3,9 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.js" integrity="sha512-+k1pnlgt4F1H8L7t3z95o3/KO+o78INEcXTbnoJQ/F2VqDVhWoaiVml/OEHv9HsVgxUaVW+IbiZPUJQfF/YxZw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <script src="app.js"></script>
+
+  <link rel="stylesheet" href="styles.css" />
+
   <title>Fun with AJAX</title>
 </head>
 <body>
   <h2>Fun with AJAX</h2>
+
+  <div>
+    <form id="new-food-item">
+      <label>Name</label>
+      <input name="name" />
+      <br/>
+      <label>Tagline</label>
+      <input name="tagline" />
+      <br/>
+      <label>Price</label>
+      <input name="price" />
+      <br/>
+      <label>Calories</label>
+      <input name="calories" />
+      <br/>
+      <button type="submit">Create</button>
+    </form>
+  </div>
+
+  <section id="food-item-container"></section>
+
 </body>
 </html>
